--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "expo-boilerplate",
   "main": "expo-router/entry",
   "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
