--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,9 @@
     "target": "ESNext",
     "moduleResolution": "node",
     "skipLibCheck": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@common/*": ["./common/*"]
     }
   },
   "include": [
