feat: basic modules

--- a/app.json
+++ b/app.json
@@ -33,7 +33,9 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-localization"
+      "expo-localization",
+      "expo-asset",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
