--- a/package.json
+++ b/package.json
@@ -24,20 +24,48 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/slider": "4.5.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@shopify/flash-list": "1.7.1",
     "@tanstack/react-query": "^5.64.1",
     "@tanstack/react-query-devtools": "^5.64.1",
     "expo": "~52.0.25",
+    "expo-apple-authentication": "~7.1.3",
+    "expo-application": "~6.0.2",
+    "expo-asset": "~11.0.2",
+    "expo-auth-session": "~6.0.2",
+    "expo-background-fetch": "~13.0.4",
+    "expo-battery": "~9.0.2",
     "expo-blur": "~14.0.2",
+    "expo-brightness": "~13.0.3",
+    "expo-calendar": "~14.0.6",
+    "expo-camera": "~16.0.12",
+    "expo-cellular": "~7.0.2",
+    "expo-checkbox": "~4.0.1",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.4",
+    "expo-contacts": "~14.0.3",
+    "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.9",
+    "expo-device": "~7.0.2",
+    "expo-document-picker": "~13.0.2",
+    "expo-file-system": "~18.0.7",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.4",
+    "expo-image-picker": "~16.0.4",
+    "expo-keep-awake": "~14.0.2",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
+    "expo-local-authentication": "~15.0.2",
     "expo-localization": "~16.0.1",
+    "expo-location": "~18.0.5",
+    "expo-network": "~7.0.5",
     "expo-router": "~4.0.16",
-    "expo-splash-screen": "~0.29.20",
+    "expo-sensors": "~14.0.2",
+    "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
