--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "expo-network": "~7.0.5",
     "expo-router": "~4.0.16",
     "expo-sensors": "~14.0.2",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
