feat: rnr package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "~/*": ["./common/*"],
       "@common/*": ["./common/*"]
     }
   },
